dev: landing 1.0.1 ,, fixing overflow horizontal components

--- a/css/landing.css
+++ b/css/landing.css
@@ -1421,36 +1421,17 @@ h1.headingS2:hover::after {
 }
 
 /* sec 6 */
-#section-6-landing img {
-  width: 650px;
+#sec6img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 25px;
-  height: 500px;
-}
-
-#desc-section-6 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 40px;
-}
-
-#desc-section-6 h1 {
-  font-size: 40px;
-  font-weight: 700;
-}
-
-#desc-section-6 p {
-  font-size: 16px;
-  font-weight: 700;
-  color: #6b6a6a;
-  width: 400px;
 }
 
 .button-wrapper button {
   padding: 10px 20px 10px 20px;
   background-color: #1e6f3a;
-  border-radius: 30px;
+  border-radius: 25px;
   border: none;
   font-weight: 600;
   color: #fff;
@@ -1482,12 +1463,6 @@ h1.headingS2:hover::after {
   margin-top: 40px;
 }
 
-.container-berita {
-  display: flex;
-  margin-top: 50px;
-  gap: 5rem;
-}
-
 .desc-container {
   display: flex;
   flex-direction: column;
@@ -1496,30 +1471,15 @@ h1.headingS2:hover::after {
   padding: 10px;
 }
 
-.berita-wrapper {
-  display: flex;
-}
-
-.berita-wrapper img {
-  box-shadow: 5px 12px 40px rgba(44, 44, 44, 0.25);
-}
-
 .berita-wrapper h1 {
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: 700;
 }
 
 .berita-wrapper p {
-  font-size: 14px;
+  font-size: 0.9rem;
   color: #6b6a6a;
   font-weight: 600;
-}
-
-.container-views {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 10px;
 }
 
 .container-views p {
